--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container-fluid">
       <a class="navbar-brand logo" href="#"><img src="photos/PAULINUM1A.png" alt="logo" /></a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -113,7 +113,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md-12">
-            <h1 class="text-uppercase" href="#menu">Menu sezonowe/h1>
+            <h1 class="text-uppercase" href="#menu">Menu sezonowe</h1>
           </div>
         </div>
         <div class="menu-item">
