--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav me-auto mb-2 mb-xl-0">
           <li class="nav-item ">
             <a class="nav-link active" href="#menu">Menu</a>
           </li>
