--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="menu-item">
           <div class="row">
             <div class="col-md-6">
-              <h3 class="menu-item-title text-uppercase">Zupa szczawiowa / jajko sadzone </h3>
+              <h3 class="menu-item-title text-uppercase">Chłodnik z botwinki / jajko  </h3>
             </div>
             <div class="col-md-6">
               <h3 class="price text-right text-uppercase">20PLN</h3>
@@ -151,7 +151,7 @@
         <div class="menu-item">
           <div class="row">
             <div class="col-md-6">
-              <h3 class="menu-item-title text-uppercase">Duet truskawkowy</h3>
+              <h3 class="menu-item-title text-uppercase">Gofry / bita śmietana / owoce</h3>
             </div>
             <div class="col-md-6">
               <h3 class="price text-right text-uppercase">20PLN</h3>
