--- a/eng.html
+++ b/eng.html
@@ -129,7 +129,7 @@
         <div class="menu-item">
           <div class="row">
             <div class="col-md-6">
-              <h3 class="menu-item-title text-uppercase">Sorrel Soup / Sunny-Side Up Egg</h3>
+              <h3 class="menu-item-title text-uppercase">Cold beetroot soup / egg </h3>
             </div>
             <div class="col-md-6">
               <h3 class="price text-right text-uppercase">20PLN</h3>
@@ -149,7 +149,7 @@
         <div class="menu-item">
           <div class="row">
             <div class="col-md-6">
-              <h3 class="menu-item-title text-uppercase">Strawberry Duo</h3>
+              <h3 class="menu-item-title text-uppercase">Waffles / whipped cream / fruit</h3>
             </div>
             <div class="col-md-6">
               <h3 class="price text-right text-uppercase">20PLN</h3>
