--- a/de.html
+++ b/de.html
@@ -129,7 +129,7 @@
         <div class="menu-item">
           <div class="row">
             <div class="col-md-6">
-              <h3 class="menu-item-title">Sauerampfersuppe / Spiegelei</h3>
+              <h3 class="menu-item-title">Kalter Rote-Bete-Suppe / Ei</h3>
             </div>
             <div class="col-md-6">
               <h3 class="price text-right">20PLN</h3>
@@ -149,7 +149,7 @@
         <div class="menu-item">
           <div class="row">
             <div class="col-md-6">
-              <h3 class="menu-item-title">Erdbeer-Duett</h3>
+              <h3 class="menu-item-title">Waffeln / Schlagsahne / Obst</h3>
             </div>
             <div class="col-md-6">
               <h3 class="price text-right">20PLN</h3>
