--- a/de.html
+++ b/de.html
@@ -207,6 +207,17 @@
                       </div>
                    </div>
                 </div>
+                <div class="col-md-12">
+                  <div class="menu-item">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <h3 class="menu-item-title text-uppercase">Heringstatar / Zwiebel / eingelegte Gurke / Ei / Pumpernickel</h3>
+                      </div>
+                      <div class="col-md-6">
+                        <h3 class="price text-right text-uppercase">100g / 20g / 10g / 10g / 60g   35PLN</h3>
+                      </div>
+                   </div>
+                </div>
       
 
               <div class="row text-center">
@@ -387,7 +398,7 @@
                       <div class="menu-item">
                         <div class="row">
                           <div class="col-md-6">
-                            <h3 class="menu-item-title">Vanilleeis / heiße Kirschen / geschlagene Sahne</h3>
+                            <h3 class="menu-item-title">Eiscreme Trio / Pfirsichmousse / Früchte / Schlagsahne</h3>
                           </div>
                           <div class="col-md-6">
                             <h3 class="price text-right">3 x 50g   23PLN</h3>
