--- a/eng.html
+++ b/eng.html
@@ -39,7 +39,7 @@
     <div class="container-fluid">
       <a class="navbar-brand logo" href="#"><img src="photos/PAULINUM1A.png" alt="logo" /></a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -129,7 +129,7 @@
         <div class="menu-item">
           <div class="row">
             <div class="col-md-6">
-              <h3 class="menu-item-title text-uppercase">Cold beetroot soup / egg </h3>
+              <h3 class="menu-item-title text-uppercase">COLD BEETROOT SOUP / EGG</h3>
             </div>
             <div class="col-md-6">
               <h3 class="price text-right text-uppercase">20PLN</h3>
@@ -149,7 +149,7 @@
         <div class="menu-item">
           <div class="row">
             <div class="col-md-6">
-              <h3 class="menu-item-title text-uppercase">Waffles / whipped cream / fruit</h3>
+              <h3 class="menu-item-title text-uppercase">WAFFLES / WHIPPED CREAM / FRUIT</h3>
             </div>
             <div class="col-md-6">
               <h3 class="price text-right text-uppercase">20PLN</h3>
@@ -204,6 +204,17 @@
                       </div>
                       <div class="col-md-6">
                         <h3 class="price text-right text-uppercase">100g / 20g / 20g   41PLN</h3>
+                      </div>
+                   </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="menu-item">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <h3 class="menu-item-title text-uppercase">Herring tartare / onion / pickled cucumber / egg / pumpernickel</h3>
+                      </div>
+                      <div class="col-md-6">
+                        <h3 class="price text-right text-uppercase">100g / 20g / 10g / 10g / 60g   35PLN</h3>
                       </div>
                    </div>
                 </div>
@@ -387,7 +398,7 @@
                       <div class="menu-item">
                         <div class="row">
                           <div class="col-md-6">
-                            <h3 class="menu-item-title text-uppercase">Vanilla ice cream / hot cherries / whipped cream</h3>
+                            <h3 class="menu-item-title text-uppercase">Ice cream trio / peach mousse / fruits / whipped cream</h3>
                           </div>
                           <div class="col-md-6">
                             <h3 class="price text-right text-uppercase">3 x 50g   23PLN</h3>
