--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- Pasek nawigacyjny -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
     <div class="container-fluid">
-      <a class="navbar-brand logo" href="#"><img src="photos/PAULINUM1.png" alt="logo" /></a>
+      <a class="navbar-brand logo" href="https://www.paulinum.pl/restauracja"><img src="photos/PAULINUM1.png" alt="logo" /></a>
 
       <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
